--- a/Home.html
+++ b/Home.html
@@ -24,14 +24,15 @@
 <title>CIFO La Violeta</title>
 </head>
 <body class="container-fluid">
-	<nav class="row navbar navbar-expand-lg navbar-dark bg-primary">
-		<a class="navbar-brand" href="#">Navbar</a>
+	<nav class="row navbar navbar-expand-lg navbar-dark bg-custom p-0">
+		<a class="navbar-brand p-0" href="#"><img src="img/soc.jpg"
+			width="130px" class="d-inline-block align-top" alt=""></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse"
 			data-target="#navbarNav" aria-controls="navbarNav"
 			aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
-		<div class="collapse navbar-collapse" id="navbarNav">
+		<div class="collapse navbar-collapse pl-1" id="navbarNav">
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item active"><a class="nav-link" href="#">Home
 						<span class="sr-only">(current)</span>
@@ -82,7 +83,7 @@
 				<li class="breadcrumb-item active" aria-current="page">Home</li>
 			</ol>
 		</nav>
-		<div class="col-6 p-0 d-flex align-items-center justify-content-end">
+		<div class="col-6 p-0 d-flex align-items-center justify-content-end  pr-md-3">
 			<a href="#" class="fa fa-facebook"></a> <a href="#"
 				class="fa fa-twitter"></a> <a href="#" class="fa fa-google"></a> <a
 				href="#" class="fa fa-linkedin"></a> <a href="#"
@@ -95,7 +96,7 @@
 				<img src="https://picsum.photos/700/400" class="card-img-top"
 					alt="...">
 				<div class="card-body">
-					<h5 class="card-title">Card title</h5>
+					<h5 class="card-title">Project One</h5>
 					<p class="card-text">Lorem ipsum dolor sit amet, consectetur
 						adipisicing elit. Amet numquam aspernatur eum quasi sapiente
 						nesciunt? Voluptatibus sit, repellat sequi itaque deserunt,
@@ -109,59 +110,7 @@
 				<img src="https://picsum.photos/700/400" class="card-img-top"
 					alt="...">
 				<div class="card-body">
-					<h5 class="card-title">Card title</h5>
-					<p class="card-text">Lorem ipsum dolor sit amet, consectetur
-						adipisicing elit. Amet numquam aspernatur eum quasi sapiente
-						nesciunt? Voluptatibus sit, repellat sequi itaque deserunt,
-						dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
-					<a href="#" class="btn btn-primary">Go somewhere</a>
-				</div>
-			</div>
-		</div>		<div class="col-12 col-md-6 col-lg-4">
-			<div class="card p-3 m-3">
-				<img src="https://picsum.photos/700/400" class="card-img-top"
-					alt="...">
-				<div class="card-body">
-					<h5 class="card-title">Card title</h5>
-					<p class="card-text">Lorem ipsum dolor sit amet, consectetur
-						adipisicing elit. Amet numquam aspernatur eum quasi sapiente
-						nesciunt? Voluptatibus sit, repellat sequi itaque deserunt,
-						dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
-					<a href="#" class="btn btn-primary">Go somewhere</a>
-				</div>
-			</div>
-		</div>		<div class="col-12 col-md-6 col-lg-4">
-			<div class="card p-3 m-3">
-				<img src="https://picsum.photos/700/400" class="card-img-top"
-					alt="...">
-				<div class="card-body">
-					<h5 class="card-title">Card title</h5>
-					<p class="card-text">Lorem ipsum dolor sit amet, consectetur
-						adipisicing elit. Amet numquam aspernatur eum quasi sapiente
-						nesciunt? Voluptatibus sit, repellat sequi itaque deserunt,
-						dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
-					<a href="#" class="btn btn-primary">Go somewhere</a>
-				</div>
-			</div>
-		</div>		<div class="col-12 col-md-6 col-lg-4">
-			<div class="card p-3 m-3">
-				<img src="https://picsum.photos/700/400" class="card-img-top"
-					alt="...">
-				<div class="card-body">
-					<h5 class="card-title">Card title</h5>
-					<p class="card-text">Lorem ipsum dolor sit amet, consectetur
-						adipisicing elit. Amet numquam aspernatur eum quasi sapiente
-						nesciunt? Voluptatibus sit, repellat sequi itaque deserunt,
-						dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
-					<a href="#" class="btn btn-primary">Go somewhere</a>
-				</div>
-			</div>
-		</div>		<div class="col-12 col-md-6 col-lg-4">
-			<div class="card p-3 m-3">
-				<img src="https://picsum.photos/700/400" class="card-img-top"
-					alt="...">
-				<div class="card-body">
-					<h5 class="card-title">Card title</h5>
+					<h5 class="card-title">Project Two</h5>
 					<p class="card-text">Lorem ipsum dolor sit amet, consectetur
 						adipisicing elit. Amet numquam aspernatur eum quasi sapiente
 						nesciunt? Voluptatibus sit, repellat sequi itaque deserunt,
@@ -170,14 +119,134 @@
 				</div>
 			</div>
 		</div>
-
-
-
-
-
+		<div class="col-12 col-md-6 col-lg-4">
+			<div class="card p-3 m-3">
+				<img src="https://picsum.photos/700/400" class="card-img-top"
+					alt="...">
+				<div class="card-body">
+					<h5 class="card-title">Project Three</h5>
+					<p class="card-text">Lorem ipsum dolor sit amet, consectetur
+						adipisicing elit. Amet numquam aspernatur eum quasi sapiente
+						nesciunt? Voluptatibus sit, repellat sequi itaque deserunt,
+						dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
+					<a href="#" class="btn btn-primary">Go somewhere</a>
+				</div>
+			</div>
+		</div>
+		<div class="col-12 col-md-6 col-lg-4">
+			<div class="card p-3 m-3">
+				<img src="https://picsum.photos/700/400" class="card-img-top"
+					alt="...">
+				<div class="card-body">
+					<h5 class="card-title">Project Four</h5>
+					<p class="card-text">Lorem ipsum dolor sit amet, consectetur
+						adipisicing elit. Amet numquam aspernatur eum quasi sapiente
+						nesciunt? Voluptatibus sit, repellat sequi itaque deserunt,
+						dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
+					<a href="#" class="btn btn-primary">Go somewhere</a>
+				</div>
+			</div>
+		</div>
+		<div class="col-12 col-md-6 col-lg-4">
+			<div class="card p-3 m-3">
+				<img src="https://picsum.photos/700/400" class="card-img-top"
+					alt="...">
+				<div class="card-body">
+					<h5 class="card-title">Project Five</h5>
+					<p class="card-text">Lorem ipsum dolor sit amet, consectetur
+						adipisicing elit. Amet numquam aspernatur eum quasi sapiente
+						nesciunt? Voluptatibus sit, repellat sequi itaque deserunt,
+						dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
+					<a href="#" class="btn btn-primary">Go somewhere</a>
+				</div>
+			</div>
+		</div>
+		<div class="col-12 col-md-6 col-lg-4">
+			<div class="card p-3 m-3">
+				<img src="https://picsum.photos/700/400" class="card-img-top"
+					alt="...">
+				<div class="card-body">
+					<h5 class="card-title">Project Six</h5>
+					<p class="card-text">Lorem ipsum dolor sit amet, consectetur
+						adipisicing elit. Amet numquam aspernatur eum quasi sapiente
+						nesciunt? Voluptatibus sit, repellat sequi itaque deserunt,
+						dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
+					<a href="#" class="btn btn-primary">Go somewhere</a>
+				</div>
+			</div>
+		</div>
 	</section>
 
+	<footer class="row bg-custom">
+		<div
+			class="col-12 p-0 d-flex align-items-center justify-content-center bg-custom">
+			<a href="#" class="fa fa-facebook"></a> <a href="#"
+				class="fa fa-twitter"></a> <a href="#" class="fa fa-google"></a> <a
+				href="#" class="fa fa-linkedin"></a> <a href="#"
+				class="fa fa-instagram"></a> <a href="#" class="fa fa-pinterest"></a>
+		</div>
+		<div class="col-12 col-md-3 bg-custom pb-3 mb-3">
+			<div class="list-group list-group-flush">
+				<a href="#"
+					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left h4">
+					DIRECTO A </a> <a href="#"
+					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left">Centros</a>
+				<a href="#"
+					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left">Oferta
+					Formativa</a> <a href="#"
+					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left">Biblioteca</a>
+				<a href="#"
+					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left">Contacto</a>
+				<a href="#"
+					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left">eCampus</a>
+				<a href="#"
+					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left">Campus
+					Virtual</a> <a href="#"
+					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left">Entrar</a>
+				<a href="#"
+					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left">Registrarse</a>
+			</div>
+		</div>
 
+		<div class="col-12 col-md-3 bg-custom pb-3 mb-3">
+			<div class="list-group list-group-flush">
+				<a href="#"
+					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left h4">
+					AYUDA </a> <a href="#"
+					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left">Sobre
+					Gencat</a> <a href="#"
+					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left">Accesibilidad
+					Formativa</a> <a href="#"
+					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left">Mapa
+					Web</a> <a href="#"
+					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left">Aviso
+					Legal</a>
+
+			</div>
+		</div>
+		<div class="col-12 col-md-6 bg-custom pb-3">
+			<div class="list-group list-group-flush">
+				<a href="#"
+					class="list-group-item list-group-item-action bg-custom text-light text-center h4">
+					SERVEI D'OCUPACIÓ DE CATALUNYA </a> <a href="#"
+					class="list-group-item list-group-item-action bg-custom text-light text-center"><strong>Aviso
+					legal :</strong> De acuerdo con el artículo 17.1 de la Ley 19/2014, la ©
+					Generalidad de Cataluña permite la reutilización de los contenidos
+					y de los datos siempre que se cite la fuente y la fecha de
+					actualización y que no se desnaturalice la información (artículo 8
+					de la Ley 37/2007) y también que no se contradiga con una licencia
+					específica. </a> 
+				<a href="#"
+					class="list-group-item list-group-item-action bg-custom text-light text-center">
+					<img src="img/sepelogotip.jpg" class="d-inline-block float-left" width="45%" height="auto"
+					alt="">
+					<img src="img/logotip_Iniciativaocupaciojuvenil_bn.jpg" 
+					class="d-inline-block float-right" width="45%" height="auto" alt=""></a>
+
+			</div>
+		</div>
+
+	</footer>
 
 
 
