--- a/Home.html
+++ b/Home.html
@@ -19,7 +19,7 @@
 <!-- Custom CSS -->
 <link rel="stylesheet"
 	href="C:/PQTM19/Projectes/web.cifo.local/css/cifo.css">
-
+<link rel="icon" href="img/favicon.ico" type="image/gif" sizes="16x16">
 
 <title>CIFO La Violeta</title>
 </head>
