--- a/Centros.html
+++ b/Centros.html
@@ -21,7 +21,7 @@
 	href="C:/PQTM19/Projectes/web.cifo.local/css/cifo.css">
 <link rel="icon" href="img/favicon.ico" type="image/gif" sizes="16x16">
 
-<title>CIFO La Violeta</title>
+<title>Centres del CIFO</title>
 </head>
 <body class="container-fluid">
 	<nav class="row navbar navbar-expand-lg navbar-dark bg-custom p-0">
@@ -34,10 +34,10 @@
 		</button>
 		<div class="collapse navbar-collapse pl-1" id="navbarNav">
 			<ul class="navbar-nav ml-auto">
-				<li class="nav-item active"><a class="nav-link" href="#">Home
-						<span class="sr-only">(current)</span>
+				<li class="nav-item active"><a class="nav-link"
+					href="home.html">Home <span class="sr-only">(current)</span>
 				</a></li>
-				<li class="nav-item"><a class="nav-link" href="Centros.html">Centros</a></li>
+				<li class="nav-item"><a class="nav-link" href="#">Centros</a></li>
 				<li class="nav-item"><a class="nav-link" href="#">Oferta
 						Formativa</a></li>
 				<li class="nav-item"><a class="nav-link" href="#">Biblioteca</a></li>
@@ -52,38 +52,14 @@
 	</nav>
 
 	<header class="row">
-		<div id="carouselExampleControls" class="col-12 p-0 carousel slide"
-			data-ride="carousel">
-			<div class="carousel-inner">
-				<div class="carousel-item active">
-					<img src="img/slide4.jpg" class="d-block w-100" alt="...">
-				</div>
-				<div class="carousel-item">
-					<img src="img/slide1.jpg" class="d-block w-100" alt="...">
-				</div>
-				<div class="carousel-item">
-					<img src="img/slide2.jpg" class="d-block w-100" alt="...">
-				</div>
-				<div class="carousel-item">
-					<img src="img/slide3.jpg" class="d-block w-100" alt="...">
-				</div>
-			</div>
-			<a class="carousel-control-prev" href="#carouselExampleControls"
-				role="button" data-slide="prev"> <span
-				class="carousel-control-prev-icon" aria-hidden="true"></span> <span
-				class="sr-only">Previous</span>
-			</a> <a class="carousel-control-next" href="#carouselExampleControls"
-				role="button" data-slide="next"> <span
-				class="carousel-control-next-icon" aria-hidden="true"></span> <span
-				class="sr-only">Next</span>
-			</a>
-		</div>
 		<nav class="col-6 p-0" aria-label="breadcrumb">
 			<ol class="breadcrumb">
-				<li class="breadcrumb-item active" aria-current="page">Home</li>
+				<li class="breadcrumb-item"><a href="home.html">Home</a></li>
+				<li class="breadcrumb-item active" aria-current="page">Centros</li>
 			</ol>
 		</nav>
-		<div class="col-6 p-0 d-flex align-items-center justify-content-end  pr-md-3">
+		<div
+			class="col-6 p-0 d-flex align-items-center justify-content-end  pr-md-3">
 			<a href="#" class="fa fa-facebook"></a> <a href="#"
 				class="fa fa-twitter"></a> <a href="#" class="fa fa-google"></a> <a
 				href="#" class="fa fa-linkedin"></a> <a href="#"
@@ -230,18 +206,18 @@
 					class="list-group-item list-group-item-action bg-custom text-light text-center h4">
 					SERVEI D'OCUPACIÓ DE CATALUNYA </a> <a href="#"
 					class="list-group-item list-group-item-action bg-custom text-light text-center"><strong>Aviso
-					legal :</strong> De acuerdo con el artículo 17.1 de la Ley 19/2014, la ©
+						legal :</strong> De acuerdo con el artículo 17.1 de la Ley 19/2014, la ©
 					Generalidad de Cataluña permite la reutilización de los contenidos
 					y de los datos siempre que se cite la fuente y la fecha de
 					actualización y que no se desnaturalice la información (artículo 8
 					de la Ley 37/2007) y también que no se contradiga con una licencia
-					específica. </a> 
-				<a href="#"
+					específica. </a> <a href="#"
 					class="list-group-item list-group-item-action bg-custom text-light text-center">
-					<img src="img/sepelogotip.jpg" class="d-inline-block float-left" width="45%" height="auto"
-					alt="">
-					<img src="img/logotip_Iniciativaocupaciojuvenil_bn.jpg" 
-					class="d-inline-block float-right" width="45%" height="auto" alt=""></a>
+					<img src="img/sepelogotip.jpg" class="d-inline-block float-left"
+					width="45%" height="auto" alt=""> <img
+					src="img/logotip_Iniciativaocupaciojuvenil_bn.jpg"
+					class="d-inline-block float-right" width="45%" height="auto" alt="">
+				</a>
 
 			</div>
 		</div>
