--- a/Centros.html
+++ b/Centros.html
@@ -69,85 +69,146 @@
 	<section class="row">
 		<div class="col-12 col-md-6 col-lg-4">
 			<div class="card p-3 m-3">
-				<img src="https://picsum.photos/700/400" class="card-img-top"
-					alt="...">
+				<img src="img/CIFO_1.jpg" class="card-img-top" alt="...">
 				<div class="card-body">
-					<h5 class="card-title">Project One</h5>
-					<p class="card-text">Lorem ipsum dolor sit amet, consectetur
-						adipisicing elit. Amet numquam aspernatur eum quasi sapiente
-						nesciunt? Voluptatibus sit, repellat sequi itaque deserunt,
-						dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
-					<a href="#" class="btn btn-primary">Go somewhere</a>
+					<h5 class="card-title text-primary">CIFO La Violeta</h5>
+					<ul class="list-unstyled small">
+						<li><span class="fa fa-phone"></span>932 54 17 00</li>
+						<li><span class="fa fa-envelope"></span>cifo_violeta.soc@gencat.cat</li>
+						<li><i class="fa fa-clock-o" aria-hidden="true"></i>Lunes-Viernes:
+							8:00 AM to 21:00 PM</li>
+						<li><span class="fa fa-map-marker"></span>Plaza del Conde de
+							Sert, 25. 08035 Barcelona</li>
+						<li><br></li>
+						<li><span class="fa fa-road"></span>Acceso
+							<ul>
+								<li>Bus: 60, H4, V15, bus barrio 124</li>
+								<li>Metro: Vall d'Hebron + bus / Metro: Penitents+bus 124</li>
+								<li>Coche: Ronda de Encima de B20, salida 6 (Vallcarca)</li>
+							</ul></li>
+					</ul>
+					<a href="#" class="btn bg-custom text-light">Go somewhere</a>
 				</div>
 			</div>
 		</div>
 		<div class="col-12 col-md-6 col-lg-4">
 			<div class="card p-3 m-3">
-				<img src="https://picsum.photos/700/400" class="card-img-top"
-					alt="...">
+				<img src="img/CIFO_2.jpg" class="card-img-top" alt="...">
 				<div class="card-body">
-					<h5 class="card-title">Project Two</h5>
-					<p class="card-text">Lorem ipsum dolor sit amet, consectetur
-						adipisicing elit. Amet numquam aspernatur eum quasi sapiente
-						nesciunt? Voluptatibus sit, repellat sequi itaque deserunt,
-						dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
-					<a href="#" class="btn btn-primary">Go somewhere</a>
+					<h5 class="card-title text-primary">CIFO Sabadell</h5>
+					<ul class="list-unstyled small">
+						<li><span class="fa fa-phone"></span>937 36 29 10</li>
+						<li><span class="fa fa-envelope"></span>
+							cifo_sabadell.soc@gencat.cat</li>
+						<li><i class="fa fa-clock-o" aria-hidden="true"></i>Lunes-Viernes:
+							8:00 AM to 21:00 PM</li>
+						<li><span class="fa fa-map-marker"></span>Carretera
+							Nacionalm.22 Terrassa</li>
+						<li><br></li>
+						<li><span class="fa fa-road"></span>Acceso
+							<ul>
+								<li>Bus C5 i C7 (interurbana de Sabadell Y Terrassa.
+									Parada: Mancomunitat</li>
+								<li>Salida 15 de la C58</li>
+							</ul></li>
+					</ul>
+					<a href="#" class="btn bg-custom text-light">Go somewhere</a>
 				</div>
 			</div>
 		</div>
 		<div class="col-12 col-md-6 col-lg-4">
 			<div class="card p-3 m-3">
-				<img src="https://picsum.photos/700/400" class="card-img-top"
-					alt="...">
+				<img src="img/CIFO_1.jpg" class="card-img-top" alt="...">
 				<div class="card-body">
-					<h5 class="card-title">Project Three</h5>
-					<p class="card-text">Lorem ipsum dolor sit amet, consectetur
-						adipisicing elit. Amet numquam aspernatur eum quasi sapiente
-						nesciunt? Voluptatibus sit, repellat sequi itaque deserunt,
-						dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
-					<a href="#" class="btn btn-primary">Go somewhere</a>
+					<h5 class="card-title text-primary">CIFO La Violeta</h5>
+					<ul class="list-unstyled small">
+						<li><span class="fa fa-phone"></span>932 54 17 00</li>
+						<li><span class="fa fa-envelope"></span>cifo_violeta.soc@gencat.cat</li>
+						<li><i class="fa fa-clock-o" aria-hidden="true"></i>Lunes-Viernes:
+							8:00 AM to 21:00 PM</li>
+						<li><span class="fa fa-map-marker"></span>Plaza del Conde de
+							Sert, 25. 08035 Barcelona</li>
+						<li><br></li>
+						<li><span class="fa fa-road"></span>Acceso
+							<ul>
+								<li>Bus: 60, H4, V15, bus barrio 124</li>
+								<li>Metro: Vall d'Hebron + bus / Metro: Penitents+bus 124</li>
+								<li>Coche: Ronda de Encima de B20, salida 6 (Vallcarca)</li>
+							</ul></li>
+					</ul>
+					<a href="#" class="btn bg-custom text-light">Go somewhere</a>
 				</div>
 			</div>
 		</div>
 		<div class="col-12 col-md-6 col-lg-4">
 			<div class="card p-3 m-3">
-				<img src="https://picsum.photos/700/400" class="card-img-top"
-					alt="...">
+				<img src="img/CIFO_1.jpg" class="card-img-top" alt="...">
 				<div class="card-body">
-					<h5 class="card-title">Project Four</h5>
-					<p class="card-text">Lorem ipsum dolor sit amet, consectetur
-						adipisicing elit. Amet numquam aspernatur eum quasi sapiente
-						nesciunt? Voluptatibus sit, repellat sequi itaque deserunt,
-						dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
-					<a href="#" class="btn btn-primary">Go somewhere</a>
+					<h5 class="card-title text-primary">CIFO La Violeta</h5>
+					<ul class="list-unstyled small">
+						<li><span class="fa fa-phone"></span>932 54 17 00</li>
+						<li><span class="fa fa-envelope"></span>cifo_violeta.soc@gencat.cat</li>
+						<li><i class="fa fa-clock-o" aria-hidden="true"></i>Lunes-Viernes:
+							8:00 AM to 21:00 PM</li>
+						<li><span class="fa fa-map-marker"></span>Plaza del Conde de
+							Sert, 25. 08035 Barcelona</li>
+						<li><br></li>
+						<li><span class="fa fa-road"></span>Acceso
+							<ul>
+								<li>Bus: 60, H4, V15, bus barrio 124</li>
+								<li>Metro: Vall d'Hebron + bus / Metro: Penitents+bus 124</li>
+								<li>Coche: Ronda de Encima de B20, salida 6 (Vallcarca)</li>
+							</ul></li>
+					</ul>
+					<a href="#" class="btn bg-custom text-light">Go somewhere</a>
 				</div>
 			</div>
 		</div>
 		<div class="col-12 col-md-6 col-lg-4">
 			<div class="card p-3 m-3">
-				<img src="https://picsum.photos/700/400" class="card-img-top"
-					alt="...">
+				<img src="img/CIFO_1.jpg" class="card-img-top" alt="...">
 				<div class="card-body">
-					<h5 class="card-title">Project Five</h5>
-					<p class="card-text">Lorem ipsum dolor sit amet, consectetur
-						adipisicing elit. Amet numquam aspernatur eum quasi sapiente
-						nesciunt? Voluptatibus sit, repellat sequi itaque deserunt,
-						dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
-					<a href="#" class="btn btn-primary">Go somewhere</a>
+					<h5 class="card-title text-primary">CIFO La Violeta</h5>
+					<ul class="list-unstyled small">
+						<li><span class="fa fa-phone"></span>932 54 17 00</li>
+						<li><span class="fa fa-envelope"></span>cifo_violeta.soc@gencat.cat</li>
+						<li><i class="fa fa-clock-o" aria-hidden="true"></i>Lunes-Viernes:
+							8:00 AM to 21:00 PM</li>
+						<li><span class="fa fa-map-marker"></span>Plaza del Conde de
+							Sert, 25. 08035 Barcelona</li>
+						<li><br></li>
+						<li><span class="fa fa-road"></span>Acceso
+							<ul>
+								<li>Bus: 60, H4, V15, bus barrio 124</li>
+								<li>Metro: Vall d'Hebron + bus / Metro: Penitents+bus 124</li>
+								<li>Coche: Ronda de Encima de B20, salida 6 (Vallcarca)</li>
+							</ul></li>
+					</ul>
+					<a href="#" class="btn bg-custom text-light">Go somewhere</a>
 				</div>
 			</div>
 		</div>
 		<div class="col-12 col-md-6 col-lg-4">
 			<div class="card p-3 m-3">
-				<img src="https://picsum.photos/700/400" class="card-img-top"
-					alt="...">
+				<img src="img/CIFO_1.jpg" class="card-img-top" alt="...">
 				<div class="card-body">
-					<h5 class="card-title">Project Six</h5>
-					<p class="card-text">Lorem ipsum dolor sit amet, consectetur
-						adipisicing elit. Amet numquam aspernatur eum quasi sapiente
-						nesciunt? Voluptatibus sit, repellat sequi itaque deserunt,
-						dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
-					<a href="#" class="btn btn-primary">Go somewhere</a>
+					<h5 class="card-title text-primary">CIFO La Violeta</h5>
+					<ul class="list-unstyled small">
+						<li><span class="fa fa-phone"></span>932 54 17 00</li>
+						<li><span class="fa fa-envelope"></span>cifo_violeta.soc@gencat.cat</li>
+						<li><i class="fa fa-clock-o" aria-hidden="true"></i>Lunes-Viernes:
+							8:00 AM to 21:00 PM</li>
+						<li><span class="fa fa-map-marker"></span>Plaza del Conde de
+							Sert, 25. 08035 Barcelona</li>
+						<li><br></li>
+						<li><span class="fa fa-road"></span>Acceso
+							<ul>
+								<li>Bus: 60, H4, V15, bus barrio 124</li>
+								<li>Metro: Vall d'Hebron + bus / Metro: Penitents+bus 124</li>
+								<li>Coche: Ronda de Encima de B20, salida 6 (Vallcarca)</li>
+							</ul></li>
+					</ul>
+					<a href="#" class="btn bg-custom text-light">Go somewhere</a>
 				</div>
 			</div>
 		</div>
