--- a/Centros.html
+++ b/Centros.html
@@ -87,7 +87,7 @@
 								<li>Coche: Ronda de Encima de B20, salida 6 (Vallcarca)</li>
 							</ul></li>
 					</ul>
-					<a href="#" class="btn bg-custom text-light">Go somewhere</a>
+					<a href="#" class="btn bg-custom text-light">Más Información</a>
 				</div>
 			</div>
 		</div>
@@ -112,15 +112,63 @@
 								<li>Salida 15 de la C58</li>
 							</ul></li>
 					</ul>
-					<a href="#" class="btn bg-custom text-light">Go somewhere</a>
+					<a href="#" class="btn bg-custom text-light">Más Información</a>
 				</div>
 			</div>
 		</div>
 		<div class="col-12 col-md-6 col-lg-4">
 			<div class="card p-3 m-3">
-				<img src="img/CIFO_1.jpg" class="card-img-top" alt="...">
+				<img src="img/CIFO_3.jpg" class="card-img-top" alt="...">
 				<div class="card-body">
-					<h5 class="card-title text-primary">CIFO La Violeta</h5>
+					<h5 class="card-title text-primary">CIFO Santa Coloma</h5>
+					<ul class="list-unstyled small">
+						<li><span class="fa fa-phone"></span>93 254 17 00 </li>
+						<li><span class="fa fa-envelope"></span>  cifo_santacoloma.soc@gencat.cat </li>
+						<li><i class="fa fa-clock-o" aria-hidden="true"></i>Lunes-Viernes:
+							8:00 AM to 21:00 PM</li>
+						<li><span class="fa fa-map-marker"></span>Estamos situados en una zona residencial y de equipamientos sociales. Dirección: avenida Ramon Berenguer IV, 74, Santa Coloma de Gramenet</li>
+						<li><br></li>
+						<li><span class="fa fa-road"></span>Acceso
+							<ul>
+								<li>Metro L1 (estación Santa Coloma) </li>
+								<li>Metro L9 - Norte (estación Singuerlín) </li>
+								<li>Autobús B-30 (parada delante del Centro) </li>
+								<li>B-20, B27 y B-80  </li>
+							</ul></li>
+					</ul>
+					<a href="#" class="btn bg-custom text-light">Más Información</a>
+				</div>
+			</div>
+		</div>
+		<div class="col-12 col-md-6 col-lg-4">
+			<div class="card p-3 m-3">
+				<img src="img/CIFO_4.jpg" class="card-img-top" alt="...">
+				<div class="card-body">
+					<h5 class="card-title text-primary">CIFO L'Hospitalet</h5>
+					<ul class="list-unstyled small">
+						<li><span class="fa fa-phone"></span>932 54 17 00</li>
+						<li><span class="fa fa-envelope"></span>  cifo_hospitalet.soc@gencat.cat </li>
+						<li><i class="fa fa-clock-o" aria-hidden="true"></i>Lunes-Viernes:
+							8:00 AM to 21:00 PM</li>
+						<li><span class="fa fa-map-marker"></span>Carretera del Mig, 24 (esquina calle Leonardo da Vinci) 08907 Hospitalet de Llobregat </li>
+						<li><br></li>
+						<li><span class="fa fa-road"></span>Acceso
+							<ul>
+								<li>Ferrocarriles de la Generalitat de Catalunya (FGC), estación Sant Josep) </li>
+								<li>Renfe cercanías (estación Bellvitge) Línea R2 destino final Vilanova i la Geltrú, Castelldefels, Aeropuerto</li>
+								<li>Metro: Línea 9 estación Can Tries/Gornal </li>
+								<li>Autobuses: L12, L52, parada en Enric Prat de la Riba/Ventura Gassol LH1, LH2, parada en Travessia Industrial/Miquel Romeu L14, parada en Avenida Fabregada/Cobalt l </li>
+							</ul></li>
+					</ul>
+					<a href="#" class="btn bg-custom text-light">Más Información</a>
+				</div>
+			</div>
+		</div>
+		<div class="col-12 col-md-6 col-lg-4">
+			<div class="card p-3 m-3">
+				<img src="img/CIFO_5.jpg" class="card-img-top" alt="...">
+				<div class="card-body">
+					<h5 class="card-title text-primary">CIFO LLeida</h5>
 					<ul class="list-unstyled small">
 						<li><span class="fa fa-phone"></span>932 54 17 00</li>
 						<li><span class="fa fa-envelope"></span>cifo_violeta.soc@gencat.cat</li>
@@ -136,15 +184,15 @@
 								<li>Coche: Ronda de Encima de B20, salida 6 (Vallcarca)</li>
 							</ul></li>
 					</ul>
-					<a href="#" class="btn bg-custom text-light">Go somewhere</a>
+					<a href="#" class="btn bg-custom text-light">Más Información</a>
 				</div>
 			</div>
 		</div>
 		<div class="col-12 col-md-6 col-lg-4">
 			<div class="card p-3 m-3">
-				<img src="img/CIFO_1.jpg" class="card-img-top" alt="...">
+				<img src="img/CIFO_6.jpg" class="card-img-top" alt="...">
 				<div class="card-body">
-					<h5 class="card-title text-primary">CIFO La Violeta</h5>
+					<h5 class="card-title text-primary">CIFO Salt</h5>
 					<ul class="list-unstyled small">
 						<li><span class="fa fa-phone"></span>932 54 17 00</li>
 						<li><span class="fa fa-envelope"></span>cifo_violeta.soc@gencat.cat</li>
@@ -160,15 +208,15 @@
 								<li>Coche: Ronda de Encima de B20, salida 6 (Vallcarca)</li>
 							</ul></li>
 					</ul>
-					<a href="#" class="btn bg-custom text-light">Go somewhere</a>
+					<a href="#" class="btn bg-custom text-light">Más Información</a>
 				</div>
 			</div>
 		</div>
-		<div class="col-12 col-md-6 col-lg-4">
+			<div class="col-12 col-md-6 col-lg-4">
 			<div class="card p-3 m-3">
-				<img src="img/CIFO_1.jpg" class="card-img-top" alt="...">
+				<img src="img/CIFO_7.jpg" class="card-img-top" alt="...">
 				<div class="card-body">
-					<h5 class="card-title text-primary">CIFO La Violeta</h5>
+					<h5 class="card-title text-primary">CIFO San Feliu</h5>
 					<ul class="list-unstyled small">
 						<li><span class="fa fa-phone"></span>932 54 17 00</li>
 						<li><span class="fa fa-envelope"></span>cifo_violeta.soc@gencat.cat</li>
@@ -184,15 +232,15 @@
 								<li>Coche: Ronda de Encima de B20, salida 6 (Vallcarca)</li>
 							</ul></li>
 					</ul>
-					<a href="#" class="btn bg-custom text-light">Go somewhere</a>
+					<a href="#" class="btn bg-custom text-light">Más Información</a>
 				</div>
 			</div>
 		</div>
-		<div class="col-12 col-md-6 col-lg-4">
+			<div class="col-12 col-md-6 col-lg-4">
 			<div class="card p-3 m-3">
-				<img src="img/CIFO_1.jpg" class="card-img-top" alt="...">
+				<img src="img/CIFO_8.jpg" class="card-img-top" alt="...">
 				<div class="card-body">
-					<h5 class="card-title text-primary">CIFO La Violeta</h5>
+					<h5 class="card-title text-primary">CIFO Tarragona</h5>
 					<ul class="list-unstyled small">
 						<li><span class="fa fa-phone"></span>932 54 17 00</li>
 						<li><span class="fa fa-envelope"></span>cifo_violeta.soc@gencat.cat</li>
@@ -208,7 +256,7 @@
 								<li>Coche: Ronda de Encima de B20, salida 6 (Vallcarca)</li>
 							</ul></li>
 					</ul>
-					<a href="#" class="btn bg-custom text-light">Go somewhere</a>
+					<a href="#" class="btn bg-custom text-light">Más Información</a>
 				</div>
 			</div>
 		</div>
