--- a/Campus.html
+++ b/Campus.html
@@ -21,7 +21,7 @@
 	href="C:/PQTM19/Projectes/web.cifo.local/css/cifo.css">
 <link rel="icon" href="img/favicon.ico" type="image/gif" sizes="16x16">
 
-<title>CIFO La Violeta</title>
+<title>CIFO La Violeta-Campus Virtual</title>
 </head>
 <body class="container-fluid">
 	<nav class="row navbar navbar-expand-lg navbar-dark bg-custom p-0">
@@ -42,7 +42,8 @@
 						Formativa</a></li>
 				<li class="nav-item"><a class="nav-link" href="#">Biblioteca</a></li>
 				<li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
-				<li class="nav-item"><a class="nav-link" href="Campus.html">Campus Virtual</a></li>
+				<li class="nav-item"><a class="nav-link" href="Campus.html">Campus
+						Virtual</a></li>
 				<li class="nav-item"><a class="nav-link" href="#">Entrar</a></li>
 				<li class="nav-item"><a class="nav-link" href="#">Registrarse</a></li>
 
@@ -51,38 +52,16 @@
 	</nav>
 
 	<header class="row">
-		<div id="carouselExampleControls" class="col-12 p-0 carousel slide"
-			data-ride="carousel">
-			<div class="carousel-inner">
-				<div class="carousel-item active">
-					<img src="img/slide4.jpg" class="d-block w-100" alt="...">
-				</div>
-				<div class="carousel-item">
-					<img src="img/slide1.jpg" class="d-block w-100" alt="...">
-				</div>
-				<div class="carousel-item">
-					<img src="img/slide2.jpg" class="d-block w-100" alt="...">
-				</div>
-				<div class="carousel-item">
-					<img src="img/slide3.jpg" class="d-block w-100" alt="...">
-				</div>
-			</div>
-			<a class="carousel-control-prev" href="#carouselExampleControls"
-				role="button" data-slide="prev"> <span
-				class="carousel-control-prev-icon" aria-hidden="true"></span> <span
-				class="sr-only">Previous</span>
-			</a> <a class="carousel-control-next" href="#carouselExampleControls"
-				role="button" data-slide="next"> <span
-				class="carousel-control-next-icon" aria-hidden="true"></span> <span
-				class="sr-only">Next</span>
-			</a>
-		</div>
+
 		<nav class="col-6 p-0" aria-label="breadcrumb">
 			<ol class="breadcrumb">
-				<li class="breadcrumb-item active" aria-current="page">Home</li>
+				<li class="breadcrumb-item"><a href="home.html">Home</a></li>
+				<li class="breadcrumb-item active" aria-current="page">Campus
+					Virtual</li>
 			</ol>
 		</nav>
-		<div class="col-6 p-0 d-flex align-items-center justify-content-end  pr-md-3">
+		<div
+			class="col-6 p-0 d-flex align-items-center justify-content-end  pr-md-3">
 			<a href="#" class="fa fa-facebook"></a> <a href="#"
 				class="fa fa-twitter"></a> <a href="#" class="fa fa-google"></a> <a
 				href="#" class="fa fa-linkedin"></a> <a href="#"
@@ -92,10 +71,9 @@
 	<section class="row">
 		<div class="col-12 col-md-6 col-lg-4">
 			<div class="card p-3 m-3">
-				<img src="https://picsum.photos/700/400" class="card-img-top"
-					alt="...">
+				<img src="img/campus_1.jpg" class="card-img-top" alt="...">
 				<div class="card-body">
-					<h5 class="card-title">Project One</h5>
+					<h5 class="card-title">TRABAJA Y EMPRENDE</h5>
 					<p class="card-text">Lorem ipsum dolor sit amet, consectetur
 						adipisicing elit. Amet numquam aspernatur eum quasi sapiente
 						nesciunt? Voluptatibus sit, repellat sequi itaque deserunt,
@@ -106,10 +84,9 @@
 		</div>
 		<div class="col-12 col-md-6 col-lg-4">
 			<div class="card p-3 m-3">
-				<img src="https://picsum.photos/700/400" class="card-img-top"
-					alt="...">
+				<img src="img/campus_2.jpg" class="card-img-top" alt="...">
 				<div class="card-body">
-					<h5 class="card-title">Project Two</h5>
+					<h5 class="card-title">SERVICIOS DE INFORMACIÓN Y GESTIÓN ACADÉMICA</h5>
 					<p class="card-text">Lorem ipsum dolor sit amet, consectetur
 						adipisicing elit. Amet numquam aspernatur eum quasi sapiente
 						nesciunt? Voluptatibus sit, repellat sequi itaque deserunt,
@@ -120,10 +97,9 @@
 		</div>
 		<div class="col-12 col-md-6 col-lg-4">
 			<div class="card p-3 m-3">
-				<img src="https://picsum.photos/700/400" class="card-img-top"
-					alt="...">
+				<img src="img/campus_3.jpg" class="card-img-top" alt="...">
 				<div class="card-body">
-					<h5 class="card-title">Project Three</h5>
+					<h5 class="card-title">SERVICIOS DEL CAMPUS</h5>
 					<p class="card-text">Lorem ipsum dolor sit amet, consectetur
 						adipisicing elit. Amet numquam aspernatur eum quasi sapiente
 						nesciunt? Voluptatibus sit, repellat sequi itaque deserunt,
@@ -134,10 +110,9 @@
 		</div>
 		<div class="col-12 col-md-6 col-lg-4">
 			<div class="card p-3 m-3">
-				<img src="https://picsum.photos/700/400" class="card-img-top"
-					alt="...">
+				<img src="img/campus_4.jpg" class="card-img-top" alt="...">
 				<div class="card-body">
-					<h5 class="card-title">Project Four</h5>
+					<h5 class="card-title">ASOCIACIONES Y CLUBES DE ESTUDIANTES</h5>
 					<p class="card-text">Lorem ipsum dolor sit amet, consectetur
 						adipisicing elit. Amet numquam aspernatur eum quasi sapiente
 						nesciunt? Voluptatibus sit, repellat sequi itaque deserunt,
@@ -148,10 +123,9 @@
 		</div>
 		<div class="col-12 col-md-6 col-lg-4">
 			<div class="card p-3 m-3">
-				<img src="https://picsum.photos/700/400" class="card-img-top"
-					alt="...">
+				<img src="img/campus_5.jpg" class="card-img-top" alt="...">
 				<div class="card-body">
-					<h5 class="card-title">Project Five</h5>
+					<h5 class="card-title">INSTALACIONES</h5>
 					<p class="card-text">Lorem ipsum dolor sit amet, consectetur
 						adipisicing elit. Amet numquam aspernatur eum quasi sapiente
 						nesciunt? Voluptatibus sit, repellat sequi itaque deserunt,
@@ -162,10 +136,9 @@
 		</div>
 		<div class="col-12 col-md-6 col-lg-4">
 			<div class="card p-3 m-3">
-				<img src="https://picsum.photos/700/400" class="card-img-top"
-					alt="...">
+				<img src="img/campus_6.jpg" class="card-img-top" alt="...">
 				<div class="card-body">
-					<h5 class="card-title">Project Six</h5>
+					<h5 class="card-title">EVENTOS</h5>
 					<p class="card-text">Lorem ipsum dolor sit amet, consectetur
 						adipisicing elit. Amet numquam aspernatur eum quasi sapiente
 						nesciunt? Voluptatibus sit, repellat sequi itaque deserunt,
@@ -229,18 +202,18 @@
 					class="list-group-item list-group-item-action bg-custom text-light text-center h4">
 					SERVEI D'OCUPACIÓ DE CATALUNYA </a> <a href="#"
 					class="list-group-item list-group-item-action bg-custom text-light text-center"><strong>Aviso
-					legal :</strong> De acuerdo con el artículo 17.1 de la Ley 19/2014, la ©
+						legal :</strong> De acuerdo con el artículo 17.1 de la Ley 19/2014, la ©
 					Generalidad de Cataluña permite la reutilización de los contenidos
 					y de los datos siempre que se cite la fuente y la fecha de
 					actualización y que no se desnaturalice la información (artículo 8
 					de la Ley 37/2007) y también que no se contradiga con una licencia
-					específica. </a> 
-				<a href="#"
+					específica. </a> <a href="#"
 					class="list-group-item list-group-item-action bg-custom text-light text-center">
-					<img src="img/sepelogotip.jpg" class="d-inline-block float-left" width="45%" height="auto"
-					alt="">
-					<img src="img/logotip_Iniciativaocupaciojuvenil_bn.jpg" 
-					class="d-inline-block float-right" width="45%" height="auto" alt=""></a>
+					<img src="img/sepelogotip.jpg" class="d-inline-block float-left"
+					width="45%" height="auto" alt=""> <img
+					src="img/logotip_Iniciativaocupaciojuvenil_bn.jpg"
+					class="d-inline-block float-right" width="45%" height="auto" alt="">
+				</a>
 
 			</div>
 		</div>
