--- a/Campus.html
+++ b/Campus.html
@@ -161,7 +161,7 @@
 			<div class="list-group list-group-flush">
 				<a href="#"
 					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left h4">
-					DIRECTO A </a> <a href="#"
+					DIRECTO A </a> <a href="Centros.html"
 					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left">Centros</a>
 				<a href="#"
 					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left">Oferta
@@ -171,7 +171,7 @@
 					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left">Contacto</a>
 				<a href="#"
 					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left">eCampus</a>
-				<a href="#"
+				<a href="Campus.html"
 					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left">Campus
 					Virtual</a> <a href="#"
 					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left">Entrar</a>
