--- a/Campus.html
+++ b/Campus.html
@@ -34,16 +34,14 @@
 		</button>
 		<div class="collapse navbar-collapse pl-1" id="navbarNav">
 			<ul class="navbar-nav ml-auto">
-				<li class="nav-item active"><a class="nav-link" href="#">Home
+				<li class="nav-item"><a class="nav-link" href="Home.html">Home
 						<span class="sr-only">(current)</span>
 				</a></li>
 				<li class="nav-item"><a class="nav-link" href="Centros.html">Centros</a></li>
-				<li class="nav-item"><a class="nav-link" href="#">Oferta
-						Formativa</a></li>
+				<li class="nav-item"><a class="nav-link" href="#">Oferta Formativa</a></li>
 				<li class="nav-item"><a class="nav-link" href="#">Biblioteca</a></li>
 				<li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
-				<li class="nav-item"><a class="nav-link" href="Campus.html">Campus
-						Virtual</a></li>
+				<li class="nav-item active"><a class="nav-link" href="Campus.html">Campus Virtual</a></li>
 				<li class="nav-item"><a class="nav-link" href="#">Entrar</a></li>
 				<li class="nav-item"><a class="nav-link" href="#">Registrarse</a></li>
 
