--- a/Contacto.html
+++ b/Contacto.html
@@ -24,7 +24,7 @@
 <title>CIFO La Violeta</title>
 </head>
 <body class="container-fluid">
-	<nav class="row navbar navbar-expand-lg navbar-dark bg-custom py-0 pr-3 pl-0 position-sticky fixed-top">
+	<nav class="row navbar navbar-expand-lg navbar-dark bg-custom p-0">
 		<a class="navbar-brand p-0" href="#"><img src="img/soc.jpg"
 			width="130px" class="d-inline-block align-top" alt=""></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse"
