Adding template functionality

--- a/Home.html
+++ b/Home.html
@@ -24,7 +24,8 @@
 <title>CIFO La Violeta</title>
 </head>
 <body class="container-fluid">
-	<nav class="row navbar navbar-expand-lg navbar-dark bg-custom py-0 pr-3 pl-0 position-sticky fixed-top">
+	<nav
+		class="row navbar navbar-expand-lg navbar-dark bg-custom py-0 pr-3 pl-0 position-sticky fixed-top">
 		<a class="navbar-brand p-0" href="#"><img src="img/soc.jpg"
 			width="130px" class="d-inline-block align-top" alt=""></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -42,7 +43,8 @@
 						Formativa</a></li>
 				<li class="nav-item"><a class="nav-link" href="#">Biblioteca</a></li>
 				<li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
-				<li class="nav-item"><a class="nav-link" href="Campus.html">Campus Virtual</a></li>
+				<li class="nav-item"><a class="nav-link" href="Campus.html">Campus
+						Virtual</a></li>
 				<li class="nav-item"><a class="nav-link" href="#">Entrar</a></li>
 				<li class="nav-item"><a class="nav-link" href="#">Registrarse</a></li>
 
@@ -82,7 +84,8 @@
 				<li class="breadcrumb-item active" aria-current="page">Home</li>
 			</ol>
 		</nav>
-		<div class="col-6 p-0 d-flex align-items-center justify-content-end  pr-md-3">
+		<div
+			class="col-6 p-0 d-flex align-items-center justify-content-end  pr-md-3">
 			<a href="#" class="fa fa-facebook"></a> <a href="#"
 				class="fa fa-twitter"></a> <a href="#" class="fa fa-google"></a> <a
 				href="#" class="fa fa-linkedin"></a> <a href="#"
@@ -229,26 +232,27 @@
 					class="list-group-item list-group-item-action bg-custom text-light text-center h4">
 					SERVEI D'OCUPACIÓ DE CATALUNYA </a> <a href="#"
 					class="list-group-item list-group-item-action bg-custom text-light text-center"><strong>Aviso
-					legal :</strong> De acuerdo con el artículo 17.1 de la Ley 19/2014, la ©
+						legal :</strong> De acuerdo con el artículo 17.1 de la Ley 19/2014, la ©
 					Generalidad de Cataluña permite la reutilización de los contenidos
 					y de los datos siempre que se cite la fuente y la fecha de
 					actualización y que no se desnaturalice la información (artículo 8
 					de la Ley 37/2007) y también que no se contradiga con una licencia
-					específica. </a> 
-				<a href="#"
+					específica. </a> <a href="#"
 					class="list-group-item list-group-item-action bg-custom text-light text-center">
-					<img src="img/sepelogotip.jpg" class="d-inline-block float-left" width="45%" height="auto"
-					alt="">
-					<img src="img/logotip_Iniciativaocupaciojuvenil_bn.jpg" 
-					class="d-inline-block float-right" width="45%" height="auto" alt=""></a>
+					<img src="img/sepelogotip.jpg" class="d-inline-block float-left"
+					width="45%" height="auto" alt=""> <img
+					src="img/logotip_Iniciativaocupaciojuvenil_bn.jpg"
+					class="d-inline-block float-right" width="45%" height="auto" alt="">
+				</a>
 
 			</div>
 		</div>
 
 	</footer>
 
-
-
+	<!-- Own JavaScript -->
+	<script src="js/cifo.js" type="text/javascript"></script>
+	
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
