--- a/Home.html
+++ b/Home.html
@@ -24,33 +24,7 @@
 <title>CIFO La Violeta</title>
 </head>
 <body class="container-fluid">
-	<nav
-		class="row navbar navbar-expand-lg navbar-dark bg-custom py-0 pr-3 pl-0 position-sticky fixed-top">
-		<a class="navbar-brand p-0" href="#"><img src="img/soc.jpg"
-			width="130px" class="d-inline-block align-top" alt=""></a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse"
-			data-target="#navbarNav" aria-controls="navbarNav"
-			aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse pl-1" id="navbarNav">
-			<ul class="navbar-nav ml-auto">
-				<li class="nav-item active"><a class="nav-link" href="#">Home
-						<span class="sr-only">(current)</span>
-				</a></li>
-				<li class="nav-item"><a class="nav-link" href="Centros.html">Centros</a></li>
-				<li class="nav-item"><a class="nav-link" href="#">Oferta
-						Formativa</a></li>
-				<li class="nav-item"><a class="nav-link" href="#">Biblioteca</a></li>
-				<li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
-				<li class="nav-item"><a class="nav-link" href="Campus.html">Campus
-						Virtual</a></li>
-				<li class="nav-item"><a class="nav-link" href="#">Entrar</a></li>
-				<li class="nav-item"><a class="nav-link" href="#">Registrarse</a></li>
-
-			</ul>
-		</div>
-	</nav>
+	<div data-include="Barra.html"></div>
 
 	<header class="row">
 		<div id="carouselExampleControls" class="col-12 p-0 carousel slide"
