--- a/Home.html
+++ b/Home.html
@@ -17,55 +17,15 @@
 <link rel="stylesheet"
 	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <!-- Custom CSS -->
-<link rel="stylesheet"
-	href="C:/PQTM19/Projectes/web.cifo.local/css/cifo.css">
+<link rel="stylesheet" href="css/cifo.css">
 <link rel="icon" href="img/favicon.ico" type="image/gif" sizes="16x16">
 
 <title>CIFO La Violeta</title>
 </head>
 <body class="container-fluid">
-	<div data-include="Barra.html"></div>
+	<div data-include="Nav.html"></div>
+	<div data-include="Header.html"></div>
 
-	<header class="row">
-		<div id="carouselExampleControls" class="col-12 p-0 carousel slide"
-			data-ride="carousel">
-			<div class="carousel-inner">
-				<div class="carousel-item active">
-					<img src="img/slide4.jpg" class="d-block w-100" alt="...">
-				</div>
-				<div class="carousel-item">
-					<img src="img/slide1.jpg" class="d-block w-100" alt="...">
-				</div>
-				<div class="carousel-item">
-					<img src="img/slide2.jpg" class="d-block w-100" alt="...">
-				</div>
-				<div class="carousel-item">
-					<img src="img/slide3.jpg" class="d-block w-100" alt="...">
-				</div>
-			</div>
-			<a class="carousel-control-prev" href="#carouselExampleControls"
-				role="button" data-slide="prev"> <span
-				class="carousel-control-prev-icon" aria-hidden="true"></span> <span
-				class="sr-only">Previous</span>
-			</a> <a class="carousel-control-next" href="#carouselExampleControls"
-				role="button" data-slide="next"> <span
-				class="carousel-control-next-icon" aria-hidden="true"></span> <span
-				class="sr-only">Next</span>
-			</a>
-		</div>
-		<nav class="col-6 p-0" aria-label="breadcrumb">
-			<ol class="breadcrumb">
-				<li class="breadcrumb-item active" aria-current="page">Home</li>
-			</ol>
-		</nav>
-		<div
-			class="col-6 p-0 d-flex align-items-center justify-content-end  pr-md-3">
-			<a href="#" class="fa fa-facebook"></a> <a href="#"
-				class="fa fa-twitter"></a> <a href="#" class="fa fa-google"></a> <a
-				href="#" class="fa fa-linkedin"></a> <a href="#"
-				class="fa fa-instagram"></a> <a href="#" class="fa fa-pinterest"></a>
-		</div>
-	</header>
 	<section class="row">
 		<div class="col-12 col-md-6 col-lg-4">
 			<div class="card p-3 m-3">
@@ -153,83 +113,13 @@
 		</div>
 	</section>
 
-	<footer class="row bg-custom">
-		<div
-			class="col-12 p-0 d-flex align-items-center justify-content-center bg-custom">
-			<a href="#" class="fa fa-facebook"></a> <a href="#"
-				class="fa fa-twitter"></a> <a href="#" class="fa fa-google"></a> <a
-				href="#" class="fa fa-linkedin"></a> <a href="#"
-				class="fa fa-instagram"></a> <a href="#" class="fa fa-pinterest"></a>
-		</div>
-		<div class="col-12 col-md-3 bg-custom pb-3 mb-3">
-			<div class="list-group list-group-flush">
-				<a href="#"
-					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left h4">
-					DIRECTO A </a> <a href="Centros.html"
-					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left">Centros</a>
-				<a href="#"
-					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left">Oferta
-					Formativa</a> <a href="#"
-					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left">Biblioteca</a>
-				<a href="#"
-					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left">Contacto</a>
-				<a href="#"
-					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left">eCampus</a>
-				<a href="Campus.html"
-					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left">Campus
-					Virtual</a> <a href="#"
-					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left">Entrar</a>
-				<a href="#"
-					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left">Registrarse</a>
-			</div>
-		</div>
 
-		<div class="col-12 col-md-3 bg-custom pb-3 mb-3">
-			<div class="list-group list-group-flush">
-				<a href="#"
-					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left h4">
-					AYUDA </a> <a href="#"
-					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left">Sobre
-					Gencat</a> <a href="#"
-					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left">Accesibilidad
-					Formativa</a> <a href="#"
-					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left">Mapa
-					Web</a> <a href="#"
-					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left">Aviso
-					Legal</a>
+	<div data-include="Footer.html"></div>
 
-			</div>
-		</div>
-		<div class="col-12 col-md-6 bg-custom pb-3">
-			<div class="list-group list-group-flush">
-				<a href="#"
-					class="list-group-item list-group-item-action bg-custom text-light text-center h4">
-					SERVEI D'OCUPACIÓ DE CATALUNYA </a> <a href="#"
-					class="list-group-item list-group-item-action bg-custom text-light text-center"><strong>Aviso
-						legal :</strong> De acuerdo con el artículo 17.1 de la Ley 19/2014, la ©
-					Generalidad de Cataluña permite la reutilización de los contenidos
-					y de los datos siempre que se cite la fuente y la fecha de
-					actualización y que no se desnaturalice la información (artículo 8
-					de la Ley 37/2007) y también que no se contradiga con una licencia
-					específica. </a> <a href="#"
-					class="list-group-item list-group-item-action bg-custom text-light text-center">
-					<img src="img/sepelogotip.jpg" class="d-inline-block float-left"
-					width="45%" height="auto" alt=""> <img
-					src="img/logotip_Iniciativaocupaciojuvenil_bn.jpg"
-					class="d-inline-block float-right" width="45%" height="auto" alt="">
-				</a>
 
-			</div>
-		</div>
-
-	</footer>
-
-	<!-- Own JavaScript -->
-	<script src="js/cifo.js" type="text/javascript"></script>
-	
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
 		type="text/javascript"></script>
 	<script
 		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
@@ -237,5 +127,12 @@
 	<script
 		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
 		type="text/javascript"></script>
+	<!-- Own JavaScript -->
+	<script src="js/cifo.js" type="text/javascript"></script>
+	<!--  <script type="text/javascript">
+		window.addEventListener("load", function() {
+			includeHTML('home')
+		});
+	</script>-->
 </body>
 </html>
